<resources>
    <string name="app_name">Runn</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="duration">Duration</string>
    <string name="finish">Finish</string>

    <string name="km">km</string>
    <string name="km_h">km/h</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="cal">cal</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="home">Home</string>
    <string name="plans">Plans</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>

    <string name="onboarding_gender_header">What\'s your gender?</string>
    <string name="onboarding_gender_comment"><![CDATA[For calorie & stride calculation]]></string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="onboarding_weight_header">How much do you weigh?</string>
    <string name="onboarding_height_header">How tall are you?</string>

    <string name="target">Target</string>
    <string name="value_percent">%.1f%%</string>
    <string name="week">week</string>
    <string name="distance_capitalized">Distance</string>
    <string name="calories">Calories</string>
    <string name="water">Water</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="value_cal">%.1f cal</string>
    <string name="value_m">%.1f m</string>

    <string name="location_permission_rationale">Location permission is needed for core functionality.</string>
    <string name="location_permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="pace_km_h">pace (km/h)</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>

    <string name="discard_and_exit">Discard and Exit</string>

</resources>