<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_surface">

    <TextView
        android:id="@+id/text_gender_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/onboarding_gender_header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_gender_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/onboarding_gender_comment"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_gender_header"
        tools:visibility="visible" />

    <com.kumela.runn.ui.core.views.GenderChooser
        android:id="@+id/gender_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/page_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_gender_comment"
        app:layout_constraintVertical_bias=".4"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/female"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/gender_chooser"
        app:layout_constraintTop_toBottomOf="@id/gender_chooser"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:text="@string/male"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/gender_chooser"
        app:layout_constraintTop_toBottomOf="@id/gender_chooser"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_weight_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/onboarding_weight_header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <NumberPicker
        android:id="@+id/number_picker_weight"
        android:layout_width="70dp"
        android:layout_height="250dp"
        android:scaleX=".8"
        android:scaleY=".8"
        android:theme="@style/Theme.Runn.NumberPicker"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/page_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_weight_header"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_height_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/onboarding_height_header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/number_picker_weight"
        app:layout_constraintStart_toEndOf="@id/number_picker_weight"
        app:layout_constraintTop_toTopOf="@id/number_picker_weight"
        tools:visibility="visible" />

    <NumberPicker
        android:id="@+id/number_picker_height"
        android:layout_width="70dp"
        android:layout_height="250dp"
        android:scaleX=".8"
        android:scaleY=".8"
        android:theme="@style/Theme.Runn.NumberPicker"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/page_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_height_header"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/number_picker_height"
        app:layout_constraintStart_toEndOf="@id/number_picker_height"
        app:layout_constraintTop_toTopOf="@id/number_picker_height"
        tools:visibility="visible" />

    <com.kumela.runn.ui.core.views.OnboardingIndicator
        android:id="@+id/page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:indicatorCount="3"
        app:layout_constraintBottom_toTopOf="@id/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bgr_btn_pr_rounded"
        android:text="@string/next"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_next_back" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@drawable/bgr_btn_pr_rounded"
        android:text="@string/back"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_next_back"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0"
        tools:layout_constraintGuide_percent=".5" />

    <include layout="@layout/component_loading_indicator" />

</androidx.constraintlayout.widget.ConstraintLayout>