<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primary_surface"
    tools:ignore="ContentDescription">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/primary_surface" />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bgr_round"
        android:backgroundTint="@color/secondary_surface_light"
        android:padding="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/secondary_surface"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/button_start_pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                tools:text="00:00:00"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="0.0"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/text_pace"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_time" />

            <TextView
                android:id="@+id/text_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                app:layout_constraintEnd_toEndOf="@id/text_distance"
                app:layout_constraintStart_toStartOf="@id/text_distance"
                app:layout_constraintTop_toBottomOf="@id/text_distance" />

            <TextView
                android:id="@+id/text_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/text_distance"
                app:layout_constraintEnd_toStartOf="@id/text_calories"
                app:layout_constraintStart_toEndOf="@id/text_distance" />

            <TextView
                android:id="@+id/text_kmh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pace_km_h"
                app:layout_constraintEnd_toEndOf="@id/text_pace"
                app:layout_constraintStart_toStartOf="@id/text_pace"
                app:layout_constraintTop_toBottomOf="@id/text_pace" />

            <TextView
                android:id="@+id/text_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@id/text_pace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/text_pace" />

            <TextView
                android:id="@+id/text_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cal"
                app:layout_constraintEnd_toEndOf="@id/text_calories"
                app:layout_constraintStart_toStartOf="@id/text_calories"
                app:layout_constraintTop_toBottomOf="@id/text_calories" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bgr_btn_pr_rounded"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="22dp"
        android:text="@string/start"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bgr_round"
        android:backgroundTint="@color/secondary_surface_light"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_lock" />

    <View
        android:id="@+id/view_lock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/overlay"
        android:clickable="true"
        android:elevation="18dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_resume"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="18dp"
        android:alpha="0"
        android:background="@drawable/bgr_round"
        android:backgroundTint="@color/primary"
        android:elevation="18dp"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_stop"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_play"
        tools:alpha="1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:text="@string/resume"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/button_resume"
        app:layout_constraintStart_toStartOf="@id/button_resume"
        app:layout_constraintTop_toBottomOf="@id/button_resume"
        tools:alpha="1"
        tools:visibility="visible" />


    <ImageButton
        android:id="@+id/button_stop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="18dp"
        android:alpha="0"
        android:background="@drawable/bgr_round"
        android:backgroundTint="@color/primary"
        android:elevation="18dp"
        android:padding="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_resume"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_stop"
        tools:alpha="1"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:alpha="0"
        android:text="@string/stop"
        android:textSize="17sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/button_stop"
        app:layout_constraintStart_toStartOf="@id/button_stop"
        app:layout_constraintTop_toBottomOf="@id/button_stop"
        tools:alpha="1"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>