<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/primary_surface"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:id="@+id/text_weekly_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:tint="@color/icon_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_drop" />

        <TextView
            android:id="@+id/text_target_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/target"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_weekly_activity" />

        <TextView
            android:id="@+id/text_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_secondary"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/text_target_header"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="4dp"
            android:text="@string/week" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@color/secondary_surface"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_target_header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.kumela.views.charts.TriplePieChart
                    android:id="@+id/chart_target"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="28dp"
                    app:strokeWidth="8dp"
                    android:layout_marginBottom="28dp"
                    android:backgroundTint="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeMargin="8dp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_target"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/target"
                    android:textColor="@color/text_secondary"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/chart_target"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_round_steps"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/bgr_round"
                    android:backgroundTint="@color/primary"
                    app:layout_constraintStart_toStartOf="@id/text_target"
                    app:layout_constraintTop_toBottomOf="@id/text_target" />

                <TextView
                    android:id="@+id/text_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/steps_capitalized"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintBottom_toBottomOf="@id/view_round_steps"
                    app:layout_constraintStart_toEndOf="@id/view_round_steps"
                    app:layout_constraintTop_toTopOf="@id/view_round_steps" />

                <TextView
                    android:id="@+id/text_steps_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_steps"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_steps"
                    tools:text="82%" />

                <View
                    android:id="@+id/view_round_calories"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bgr_round"
                    android:backgroundTint="@color/accent_variant"
                    app:layout_constraintStart_toStartOf="@id/view_round_steps"
                    app:layout_constraintTop_toBottomOf="@id/view_round_steps" />

                <TextView
                    android:id="@+id/text_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintBottom_toBottomOf="@id/view_round_calories"
                    app:layout_constraintStart_toStartOf="@id/text_steps"
                    app:layout_constraintTop_toTopOf="@id/view_round_calories" />

                <TextView
                    android:id="@+id/text_calories_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_calories"
                    app:layout_constraintEnd_toEndOf="@id/text_steps_percentage"
                    tools:text="92%" />

                <View
                    android:id="@+id/view_round_water"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bgr_round"
                    android:backgroundTint="@color/accent"
                    app:layout_constraintStart_toStartOf="@id/view_round_calories"
                    app:layout_constraintTop_toBottomOf="@id/view_round_calories" />

                <TextView
                    android:id="@+id/text_water"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/water"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintBottom_toBottomOf="@id/view_round_water"
                    app:layout_constraintStart_toStartOf="@id/text_calories"
                    app:layout_constraintTop_toTopOf="@id/view_round_water" />

                <TextView
                    android:id="@+id/text_water_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_water"
                    app:layout_constraintStart_toStartOf="@id/text_calories_percentage"
                    tools:text="75%" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_steps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/secondary_surface"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_target">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:paddingStart="12dp"
                android:paddingTop="16dp"
                android:paddingEnd="12dp"
                android:paddingBottom="16dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_steps_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="11 500" />

                <TextView
                    android:id="@+id/text_steps_count_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/steps"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@id/text_steps_count"
                    app:layout_constraintStart_toEndOf="@id/text_steps_count" />

                <TextView
                    android:id="@+id/text_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/text_secondary"
                    app:layout_constraintStart_toStartOf="@id/text_steps_count"
                    app:layout_constraintTop_toBottomOf="@id/text_steps_count" />

                <View
                    android:id="@+id/time_period_chooser"
                    android:layout_width="90dp"
                    android:layout_height="36dp"
                    android:background="@color/primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/chart_steps"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    app:layout_constraintTop_toBottomOf="@id/text_today"
                    android:layout_marginTop="28dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@color/primary" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_recent_activities"
            android:layout_width="wrap_content"
            android:text="@string/recent_activities"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/card_steps"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_runs"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_recent_activities"
            android:layout_marginTop="8dp"
            tools:listitem="@layout/item_run"
            tools:itemCount="2"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>